# chip8-emulator

./: CMakeLists.txt  README.md  main.cpp
chip/: chip8.cpp  chip8.h
sdl-window/: sdl-window.cpp  sdl-window.h
test/: test.cpp
